Model workflow updates

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,8 @@
 PORT=8000
 # Worker service URL (optional in dev)
 WORKER_URL=http://worker:9000
+# Choose model provider for worker (e.g., silhouette | triposr | smplx)
+MODEL_PROVIDER=silhouette
 
 # Internal URL the worker and backend can reach
 BACKEND_INTERNAL_URL=http://backend:8000
@@ -22,3 +24,5 @@ USE_S3=false
 #APP_CALLBACK_URL=https://your-app-url
 MODEL_CALLBACK_SECRET=change-me
 
+# Delete input photos after successful model generation (recommended outside dev)
+DELETE_INPUTS_ON_SUCCESS=false
