--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
   },
   "python.analysis.typeCheckingMode": "basic",
   "python.defaultInterpreterPath": "python3",
-  "terminal.integrated.defaultProfile.linux": "bash"
+  "terminal.integrated.defaultProfile.linux": "bash",
+  "python.terminal.useEnvFile": true,
 }
