--- a/apps/shopify/package.json
+++ b/apps/shopify/package.json
@@ -17,7 +17,8 @@
     "prisma": "prisma",
     "graphql-codegen": "graphql-codegen",
     "vite": "vite",
-    "test": "vitest run"
+    "test": "vitest run",
+    "security:allowlist": "node ./scripts/check-dependency-allowlist.mjs"
   },
   "type": "module",
   "engines": {
