--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,16 +1,13 @@
 FROM python:3.11-slim
 WORKDIR /app
 ENV PYTHONDONTWRITEBYTECODE=1 PYTHONUNBUFFERED=1
-# core deps + uploads + s3 (R2-compatible) + http client
-RUN pip install --no-cache-dir \
-    fastapi \
-    uvicorn[standard] \
-    python-dotenv \
-    pydantic \
-    python-multipart \
-    boto3 \
-    httpx \
-    SQLAlchemy
+
+# Install dependencies from pyproject.toml
+COPY pyproject.toml .
+RUN pip install --no-cache-dir .
+
 COPY . .
-# hot reload in dev is fine via --reload
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+
+# Production: no --reload flag
+# For development, override with: docker compose run --rm backend uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
