build: file updates for uv usage

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,12 +2,15 @@ FROM python:3.11-slim
 WORKDIR /app
 ENV PYTHONDONTWRITEBYTECODE=1 PYTHONUNBUFFERED=1
 
-# Install dependencies from pyproject.toml
-COPY pyproject.toml .
-RUN pip install --no-cache-dir .
+# Install uv package manager
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+
+# Install dependencies using uv (faster, with lockfile support)
+COPY pyproject.toml uv.lock* ./
+RUN uv sync --frozen --no-dev --no-install-project
 
 COPY . .
 
 # Production: no --reload flag
-# For development, override with: docker compose run --rm backend uvicorn main:app --host 0.0.0.0 --port 8000 --reload
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# For development, override with: docker compose run --rm backend uv run uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+CMD ["uv", "run", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
