--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -2,11 +2,14 @@ FROM python:3.11-slim
 WORKDIR /app
 ENV PYTHONDONTWRITEBYTECODE=1 PYTHONUNBUFFERED=1
 
-# Install dependencies from pyproject.toml
-COPY pyproject.toml .
-RUN pip install --no-cache-dir .
+# Install uv package manager
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+
+# Install dependencies using uv (faster, with lockfile support)
+COPY pyproject.toml uv.lock* ./
+RUN uv sync --frozen --no-dev --no-install-project
 
 COPY . .
 
 # Production: no --reload flag
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "9000"]
+CMD ["uv", "run", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "9000"]
