--- a/worker/pyproject.toml
+++ b/worker/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "httpx==0.28.0",
     # Image processing
     "pillow==11.0.0",
-    "numpy==2.1.3",
+    "numpy>=1.26.0,<2",  # MediaPipe requires numpy<2
     # 3D mesh processing
     "trimesh==4.5.3",
     "scipy==1.14.1",
@@ -20,9 +20,16 @@ dependencies = [
 [project.optional-dependencies]
 gpu = [
     # PyTorch for GPU inference - install separately with CUDA support
-    # pip install torch --index-url https://download.pytorch.org/whl/cu121
+    # uv pip install torch --index-url https://download.pytorch.org/whl/cu121
     "torch>=2.0.0",
 ]
+dev = [
+    "pytest>=8.0.0",
+    "ruff>=0.8.0",
+    "mypy>=1.13.0",
+]
+
+[dependency-groups]
 dev = [
     "pytest>=8.0.0",
     "ruff>=0.8.0",
