--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -2,7 +2,7 @@
 name = "backend"
 version = "0.1.0"
 description = "Rapso backend - FastAPI service for uploads, presign/commit/status, asset serving"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<3.14"
 dependencies = [
     "fastapi==0.115.5",
     "uvicorn[standard]==0.32.1",
